[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Enemies/enemy_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/Enemy_2/Enemy_2.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 4.0

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disappear"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Death/node = SubResource( 12 )
states/Death/position = Vector2( 561, 69 )
states/Walk/node = SubResource( 13 )
states/Walk/position = Vector2( 278, 69 )
transitions = [ "Walk", "Death", SubResource( 14 ) ]
start_node = "Walk"
end_node = "Death"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.0
height = 4.0

[node name="Enemy_2" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 26
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/Walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 11 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
